sleeper-manifests/sleeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleeper
  namespace: closed-services
  labels:
    app: sleeper
spec:
  selector:
    app: sleeper
  ports:
    - name: web
      port: 8080
      targetPort: 8080
